Fri Sep 10 13:53:00 UTC 2004  Martin Corino  <mcorino@remedy.nl>

	* ace/Time_Value.h:
	* ace/Time_Value.inl:

      Moved '#include "ace/Basic_Types.h"' from Time_Value.cpp to
      Time_Value.h because it's needed there since ACE_UINT64 is
      introduced (see below).

Thu Sep 09 18:29:17 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Time_Value.h (msec):
	* ace/Time_Value.inl (msec):

	  Even though MSVC++ 6 supports 64 bit integers, it does not
	  support the "long long" syntax.  Instead it supports its own
	  "__int64" built-in type.  Use "ACE_UINT64" instead of "unsigned
	  long long".  Fixes syntax errors exhibited by MSVC++ 6.

Thu Sep  9 16:40:27 2004  Steve Huston  <shuston@riverace.com>

	* apps/Gateway/Gateway/Connection_Handler.cpp:
	* apps/Gateway/Gateway/Connection_Handler_Connector.cpp:
	* apps/Gateway/Gateway/File_Parser.{h cpp}:
	* apps/Gateway/Gateway/Gateway.cpp:
	* apps/Gateway/Gateway/gatewayd.cpp:
	* apps/Gateway/Peer/Options.{h cpp}:
	* apps/Gateway/Peer/Peer.{h cpp}: Narrow/wide char fixes.

	* apps/Gateway/Gateway/Options.h: Removed const char *connector_host()
	  method because it's not ever defined or referenced.

	* apps/Gateway/Peer/peer.mpc: New project definition.

Thu Sep  9 16:17:38 2004  Olli Savia  <ops@iki.fi>

        * apps/JAWS3/jaws3/Templates.cpp:
          Added explicit static template member instantiations.

Thu Sep  9 05:58:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.cpp:
          Implemented num_processors and num_processors_online for Cygwin

Wed Sep  8 21:50:13 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * ace/Time_Value.h:
        * ace/Time_Value.inl:

          The change added in this checkin

          Wed Sep  8 10:17:46 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>
          should not be available on platforms that lacks long long.

Wed Sep  8 17:13:41 2004  Steve Huston  <shuston@riverace.com>
